test_scripts/errors/loop_variable_not_in_scope.shm
let lst = ["foo", "bar", "baz"]
for item in lst {}
print(item)
